Include PdfViewer component to simplify testing

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -1,5 +1,7 @@
 {
   "scm-gotenberg-plugin": {
-
+    "pdfViewer": {
+      "notSupported": "Das Dokument konnte nicht angezeigt werden. Es kann <1>hier</1> heruntergeladen werden."
+    }
   }
 }
