--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -1,5 +1,7 @@
 {
   "scm-gotenberg-plugin": {
-
+    "pdfViewer": {
+      "notSupported": "Failed to display the document. Please download it from <1>here</1>."
+    }
   }
 }
