Add configuration frontend

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -2,6 +2,15 @@
   "scm-gotenberg-plugin": {
     "pdfViewer": {
       "notSupported": "Das Dokument konnte nicht angezeigt werden. Es kann <1>hier</1> heruntergeladen werden."
+    },
+    "config": {
+      "title": "Gotenberg Konfiguration",
+      "link": "Gotenberg",
+      "url": "URL",
+      "urlHelpText": "URL des Gotenberg Servers z.B.: http://localhost:3000",
+      "invalid": "Ungültiges URL Format, bitte ein gültiges URL Format verwenden z.B.: http://localhost:3000",
+      "enabled": "Aktivieren",
+      "enabledHelpText": "Aktivieren um Dokumente mit Gotenberg zu konvertieren"
     }
   },
   "permissions": {
