Add Gotenberg server status code pre-check
In Converter.java, a try-catch statement has been added to forward a proper response of the plugin to bad status codes thrown by the Gotenberg server. These are usually kept in a generic fashion (503 Service Unavailable), so there has not been an incentive to further differentiate the new exception.

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -1,7 +1,7 @@
 {
   "scm-gotenberg-plugin": {
     "pdfViewer": {
-      "notSupported": "Das Dokument konnte nicht angezeigt werden. Es kann <1>hier</1> heruntergeladen werden."
+      "notSupported": "Das Dokument konnte nicht angezeigt werden. Möglicher Weise ist es zu groß oder zu komplex ist. Es kann <1>hier</1> heruntergeladen werden."
     },
     "config": {
       "title": "Gotenberg Konfiguration",
